--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -2326,6 +2326,11 @@ a.list-group-item.active:focus {
   padding: 15px 15px 8px 15px;
 }
 
+.piechartwidth svg {
+  width: 100%;
+  height: auto;
+}
+
 .boxshadow {
   -webkit-box-shadow: 0px 0px 12px -2px rgba(199, 199, 199, 1);
   -moz-box-shadow: 0px 0px 12px -2px rgba(199, 199, 199, 1);
