--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -5339,6 +5339,9 @@ a.forum-item-title:hover {
 .slick-next:before {
   color: #1ab394 !important;
 }
+.slick-slide {
+  width: fit-content !important;
+}
 
 /* Payments */
 
@@ -12979,6 +12982,12 @@ body.md-skin {
   .navbar-top-links .dropdown-alerts {
     margin-left: auto;
   }
+  
+}
+@media (max-width: 767px) {
+  body.mini-navbar #page-wrapper {
+    margin: 0 0 0 0px;
+}
 }
 
 @media (max-width: 768px) {
@@ -13055,6 +13064,7 @@ body.md-skin {
     transition: background-color 500ms linear;
     background-color: #f3f3f4;
   }
+  
 }
 
 @media (max-width: 350px) {
