--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -323,6 +323,10 @@ ul.nav-second-level {
   color: #8095a8 !important;
 }
 
+.textclr{
+  color:	rgb(128,128,128);
+}
+
 .minimalize-styl-2 {
   padding: 4px 4px;
   margin: 17px 5px 5px 5px;
