--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -337,6 +337,25 @@ ul.nav-second-level {
   display: none;
 }
 
+.float{
+	position:fixed;
+	width:60px;
+	height:60px;
+	bottom:19px;
+	right:20px;
+	background-color:#329f9d;
+	color:#FFF;
+	border-radius:50px;
+	text-align:center;
+  box-shadow: 2px 2px 3px #999;
+  z-index: 999;
+  font-size: 20px;
+}
+
+.my-float{
+	margin-top:19px;
+}
+
 .navbar-form-custom {
   float: left;
   height: 50px;
